[youtube-focus] Fix incorrect profile dropdown header spacing.

--- a/youtube-focus.user.css
+++ b/youtube-focus.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name         Youtube Focus (CSS)
 @description  Style that hides some Youtube features.
-@version      0.2.3
+@version      0.2.4
 @author       xtevenx
 @license      Unlicense
 ==/UserStyle== */
@@ -27,7 +27,7 @@
     margin: 0 !important;
   }
 
-  #header {
+  #header.ytd-browse {
     transform: translateY(calc(-1 * var(--ytd-toolbar-height)));
   }
 
